--- a/frontend/src/components/auth/Login.css
+++ b/frontend/src/components/auth/Login.css
@@ -1,26 +1,25 @@
-.register__container {
+.login__container {
   border-radius: 2em;
   border-style: solid;
   margin: auto;
   max-width: 500px;
 }
 
-.register__h2 {
-  margin: 1em;
+.login__h2 {
   text-align: center;
 }
 
-.register__button {
+.login__single-input label {
+  display: inline-block;
+  padding: 0.5em;
+  text-align: right;
+  width: 150px;
+}
+
+.login__button {
   border-radius: 5px;
   display: block;
   margin: auto;
   margin-bottom: 0.5em;
   margin-top: 0.5em;
-}
-
-.register__single-input label {
-  display: inline-block;
-  padding: 0.5em;
-  text-align: right;
-  width: 150px;
 }
